--- a/Git-2.css
+++ b/Git-2.css
@@ -14,10 +14,16 @@ nav {
     padding: 10px;
 }
 
-.nav-item {
+.nav-boven {
     flex: 1; 
     text-align: center;
-    color: white;
+    color: rgb(119, 17, 17);
     padding: 15px;
     margin: 0 5px;
+}
+
+img {
+    flex: 1;
+    width: 10%;
+    height: 75px;
 }
