--- a/Git-2.css
+++ b/Git-2.css
@@ -27,3 +27,14 @@ img {
     width: 10%;
     height: 75px;
 }
+
+li{
+    list-style: none;
+    font-size: 14pt;
+    display: inline;
+}
+
+a{
+    text-decoration: none;
+    color: black; /* Kleur zwart gemaakt zodat ik het nog kan zien totdat de video word geplaatst */
+}
