--- a/Git-2.css
+++ b/Git-2.css
@@ -38,3 +38,13 @@ a{
     text-decoration: none;
     color: black; /* Kleur zwart gemaakt zodat ik het nog kan zien totdat de video word geplaatst */
 }
+
+.kaka{
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: black;
+    background-color: red;
+    border: 1px red solid;
+    border-radius: 20px;
+}
